# multidim-indices

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  instructions.md
include/: multidim.hpp
src/: helloworld.cpp  multidim.cpp  multidim_internal.hpp  multidim_p.hpp  smalldim_opt.hpp
test/: benchmark.cpp  config.mk  integration.cpp  multidim.cpp  multidim.hpp  multidim_p.hpp  unit.cpp
